--- a/day2.html
+++ b/day2.html
@@ -554,8 +554,8 @@ None
 </ul>
 <p>OR</p>
 <ul>
-<li><h2 id="it-is-a-named-location-used-to-store-data-in-memory">It is a
-named location used to store data in memory.</h2></li>
+<li>It is a
+named location used to store data in memory.</li>
 <li>It holds data that can be changed later in a program.</li>
 <li>For e.g., <code>num = 10</code> ,
 <code>website = "apple.com"</code></li>
