--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
     <body>
         <style>
             body{
-                background-image: url(/assets/img/portfolio/progress.gif);
+                background-image: url('/assets/img/portfolio/progress.gif');
             }
         </style> 
     </body>
