--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
         <div class="hidden w-full" id="navbar-hamburger">
           <ul class="flex flex-col font-medium mt-4 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700">
             <li>
-              <a href="../frontend/Chapters/day1.html" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded dark:bg-blue-600" aria-current="page">Chapter 1</a>
+              <a href="https://0gaurav4.github.io/frontend/Chapters/day1.html" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded dark:bg-blue-600" aria-current="page">Chapter 1</a>
             </li>
             <li>
-              <a href="../frontend/Chapters/day2.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Chapter 2</a>
+              <a href="https://0gaurav4.github.io/frontend/Chapters/day2.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Chapter 2</a>
             </li>
             <li>
-              <a href="../frontend/Chapters/day3.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white">Chapter 3</a>
+              <a href="https://0gaurav4.github.io/frontend/Chapters/day3.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white">Chapter 3</a>
             </li>
             <li>
               <a href="https://github.com/0gaurav4/Python-Internship/tree/main/python" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Projects</a>
