--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <a href="https://0gaurav4.github.io/Python-Internship/Chapters/day3.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white">Chapter 3</a>
             </li>
             <li>
-              <a href="https://github.com/0gaurav4/Python-Internship/tree/main/python" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Projects</a>
+              <a href="https://github.com/0gaurav4/Python-Internship/tree/main/Python%20programs" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Projects</a>
             </li>
           </ul>
         </div>
