--- a/index.html
+++ b/index.html
@@ -92,10 +92,16 @@
               <a href="https://0gaurav4.github.io/Python-Internship/Chapters/day5.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white">Chapter 5</a>
             </li>
             <li>
-              <a href="https://0gaurav4.github.io/Python-Internship/Chapters/python_cheatsheet.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white">Cheatsheet.py</a>
+              <a href="https://github.com/0gaurav4/Python-Internship/tree/main/Python%20programs" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Projects</a>
             </li>
             <li>
-              <a href="https://github.com/0gaurav4/Python-Internship/tree/main/Python%20programs" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Projects</a>
+              <a href="https://drive.google.com/file/d/1Pm2W6kwqcjnLyej_XW1vX5i2B28Wnxmu/view?usp=drivesdk" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white">Cheatsheet.py</a>
+            </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1PqY2GU7tpMIV7dyYS6o3bqIy1kDybN-M/view?usp=drivesdk" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white">Handwritten Notes</a>
+            </li>
+            <li>
+              <a href="https://github.com/0gaurav4/DataScience-DP" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Python with github</a>
             </li>
           </ul>
         </div>
