--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
               <a href="https://drive.google.com/file/d/1PqY2GU7tpMIV7dyYS6o3bqIy1kDybN-M/view?usp=drivesdk" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white">Handwritten Notes</a>
             </li>
             <li>
+              <a href="https://youtube.com/playlist?list=PLeo1K3hjS3uu_n_a__MI_KktGTLYopZ12&feature=shared" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white">DSA Python</a>
+            </li>
+            <li>
+              <a href="https://chat.openai.com/share/fe3b8d85-e0a9-4ea7-b931-be673bd6e47b" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white">Interviews</a>
+            </li>
+            <li>
               <a href="https://github.com/0gaurav4/DataScience-DP" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Python with github</a>
             </li>
           </ul>
