--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
             <li>
               <a href="https://github.com/0gaurav4/DataScience-DP" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Python with github</a>
             </li>
+            <li> 
+               <a href="https://0gaurav4.github.io/Check-Your-Project-Popularity/blogs.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Intro To Projects</a> 
+             </li>
           </ul>
         </div>
       </div>
